[project]
name = "pychute"
version = "0.0.6"
authors = [
  { name="Lukasz Zerucha", email="lzerucha@gmail.com" },
]
description = "A library that helps downloading videos from bitchute.com"
readme = "README.md"
requires-python = ">=3.8"
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "selenium",
    "beautifulsoup4"
]

[project.urls]
Homepage = "https://github.com/paichiwo/pychute"
Issues = "https://github.com/paichiwo/pychute/issues"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "lxml",
    "selenium",
    "beautifulsoup4",
]
build-backend = "setuptools.build_meta"